--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,17 +9,12 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "logo-192x192.png",
+      "src": "/logo-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    },
-    {
-      "src": "logo-512x512.png",
+      "src": "/logo-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
